# TestRustOpenXR

./: .gitignore  Cargo.toml  Justfile  README.md
src/: controls.rs  debug_pattern.frag.spv  debug_pattern.frag.spv.disasm  fullscreen.vert.spv  fullscreen.vert.spv.disasm  game.rs  lib.rs  math.rs  shader.glsl.frag  shader.glsl.vert  shell.rs
src/shaders/: mod.rs
src/shaders/disasm/: fullscreen.vert  fullscreen.vert.disasm
src/shaders/glsl/: debug_pattern.frag  fullscreen.vert
src/shaders/spv/: fullscreen.vert.spv
