[package]
name = "na-openxr-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
ash = "0.38.0"
wgpu-core = { version = "22", features = [ "vulkan" ] }
wgpu-hal = { version = "22", features = [ "vulkan" ] }
wgpu = "22"
wgpu-types = "22"
anyhow = "1"
bitflags = "1"
cgmath = "0.18.0"
bytemuck = { version = "1.16", features = [ "derive" ] }

[target.'cfg(not(target_os = "android"))'.dependencies]
openxr = { version = "0.17", features = [ "static" ] }
env_logger = "0.10"
ctrlc = "3"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11.0"
android-activity = { version = "0.4", features = [ "native-activity" ] }
openxr = { version = "0.17", features = [ "linked" ] }

[features]
default = []
#default = [ "android" ]

#android = [ "openxr/linked" ]
desktop = []

[lib]
name="main"
crate-type=["cdylib"]

[[bin]]
path="src/lib.rs"
name="test-openxr-wgpu"
required-features = [ "desktop" ]
